# yuntech_item_system

./: .gitignore  README.md  Release.lnk  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts  vite.config.ts.timestamp-1714914278982-ec738a71229da.mjs
src/: App.vue  main.scss  main.ts  quasar-variables.sass  router.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/: lend_history.docx
src-tauri/src/: main.rs  marco.rs
src-tauri/src/commands/: auth.rs  item.rs  lend.rs  maintenance.rs  mod.rs  user.rs
src-tauri/src/configs/: db.rs
src-tauri/src/models/: item.rs  lend.rs  login.rs  maintenance.rs  mod.rs  user.rs
src-tauri/src/utils/: default.rs  logger.rs  mod.rs  my_result.rs
src/components/: CRouterLink.vue  Footer.vue  Header.vue  index.ts
src/components/Dialog/: ConfirmDialog.vue  ReturnItemDialog.vue
src/components/Form/: ItemForm.vue  LendItemForm.vue  MaintenanceForm.vue  UserManagerForm.vue
src/components/Scrap/: ItemInfo.vue  LendItemFilter.vue  LendItemInfo.vue  MaintenanceFilter.vue  MaintenanceInfo.vue  UserInfo.vue
src/components/Utils/: CardContent.vue  DateTime.vue  InputNum.vue  InputStr.vue  index.ts
src/i18n/: index.ts  zh-TW.json
src/models/: CardContent.ts  Command.ts  ExportLend.ts  Item.ts  LendItem.ts  MaintenanceItem.ts  Mongodb.ts  User.ts
src/stores/: Item.ts  LendItem.ts  Login.ts  MaintenanceItem.ts  Setting.ts  User.ts  index.ts
src/utils/: Export.ts  Rules.ts  index.ts
src/views/: LendItem.vue  Login.vue
(+14 files in other folders)
